--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,21 @@ body {
     background-color: #ffff;
 }
 
-ul, ol {
-	list-style-type: none;
+h1, h2, h3, h4, h5, h6, p {
+	font-family: 'Roboto', sans-serif;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Roboto', sans-serif;
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
 }
 
 button {
@@ -25,8 +34,71 @@ a {
     color: #434455;
 }
 
+.list-item {
+	list-style-type: none;
+}
+
+/* ===== */
+
+/* ==========CONTAINER================ */
+
+.container { 
+    max-width: 1158px;
+    padding-left: 15px; 
+    padding-right: 15px; 
+    margin: 0 auto;
+    }
+
+/* =============HEADER============== */
+
+.flexpos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E7E9FC;
+}
+
+.logonav {
+    margin-right: 76px;
+}
+
+.nav-list {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.contacts-list {
+    display: flex;
+    gap: 40px;
+}
+
+
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+/* HERO SECTION */
 .hero-section {
     background-color: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 48px;
+    align-items: center;
+
 }
 
 .main-title {
@@ -37,6 +109,7 @@ a {
     text-align: center;
     line-height: 1.07;
     color: #ffffff;
+    max-width: 496px;
 }
 
 .order-cta {
@@ -48,6 +121,10 @@ a {
     letter-spacing: 0.64px;
     color: #ffff;
     background: #4D5AE5;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding: 16px 32px;
 }
 
 .order-cta:focus,
@@ -56,6 +133,7 @@ a {
 
 }
 
+/* SECOND SECTION */
 .secondary-title {
     font-family: Roboto;
     font-size: 36px;
@@ -67,6 +145,36 @@ a {
     text-transform: capitalize;
     color: #2e2f42;
 }
+
+.advantages {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    
+}
+
+.adv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    width: calc((100% - 3*24px) / 4);
+    /* max-width: 264px; */
+}
+/* HIDDEN ELEMENT */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+/* ===================== */
 
 .third-section {
     background-color: #F4F4FD;
@@ -140,6 +248,7 @@ a {
 
 
 .contacts-info {
+    gap: 40px;
     font-style: normal;
 }
 
