--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,17 @@ a {
     background-color: #F4F4FD;
 }
 
+.secondary-title {
+    margin-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    
+}
+
 .third-order-title{
     font-family: Roboto;
     font-size: 20px;
@@ -192,7 +203,25 @@ a {
 }
 
 .bio-info {
-    background-color: #FFFFFF
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    width: calc((100% - 3*24px) / 4);
+    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    
+
+}
+
+.team-content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    align-items: center;
+    margin: 32px 16px;
+    width: 232px;
 }
 
 .navlink-text {
@@ -253,7 +282,14 @@ a {
 }
 
 .last-info {
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: #2e2f42;
+}
+
+.logo-bot {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .studio-footer {
@@ -268,6 +304,8 @@ a {
     color: #2e2f42;
 }
 
+
+
 .body-text-footer{
     font-family: Roboto;
     font-size: 16px;
@@ -276,5 +314,40 @@ a {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #F4F4FD;
+    max-width: 264px;
+
+
+}
+
+/* Portfolio content */
+.portfolio-content {
+    display: flex;
+    flex-direction: column;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    align-items: flex-start;
+    text-align: start;
+    gap: 8px;
+    width: 360px;
+
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 48px;
+}
+
+.port-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    width: calc((100% - 2*24px) / 3);
+    border: 1px solid #E7E9FC;
+
 
 }
