--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,7 @@ a {
 }
 
 .main-header {
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
     border-bottom: 1px solid #E7E9FC;
 }
 
@@ -70,7 +69,7 @@ a {
 .nav-list {
     display: flex;
     flex-direction: row;
-    gap: 24px;
+    gap: 40px;
 }
 
 .contacts-list {
@@ -125,6 +124,7 @@ a {
     border: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     padding: 16px 32px;
+    min-width: 169px;
 }
 
 .order-cta:focus,
@@ -135,7 +135,7 @@ a {
 
 /* SECOND SECTION */
 .secondary-title {
-    font-family: Roboto;
+    font-family: "Roboto", sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -157,12 +157,22 @@ a {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    
     width: calc((100% - 3*24px) / 4);
     /* max-width: 264px; */
 }
 /* HIDDEN ELEMENT */
 .visually-hidden {
+    font-family: "Roboto", sans-serif;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #2e2f42;
+    display: none;
     position: absolute;
     width: 1px;
     height: 1px;
@@ -173,6 +183,10 @@ a {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+.description {
+    text-align: center;
 }
 /* ===================== */
 
@@ -200,13 +214,14 @@ a {
     letter-spacing: 0.4px;
     text-align: center;
     color: #2e2f42;
+    margin-bottom: 8px;
+
 }
 
 .bio-info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
     width: calc((100% - 3*24px) / 4);
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
@@ -218,10 +233,11 @@ a {
 .team-content {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    /* gap: 8px; */
     align-items: center;
-    margin: 32px 16px;
+    /* margin: 32px 16px; */
     width: 232px;
+    padding: 32px 0;
 }
 
 .navlink-text {
@@ -323,14 +339,12 @@ a {
 .portfolio-content {
     display: flex;
     flex-direction: column;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding: 32px 16px;
     align-items: flex-start;
     text-align: start;
     gap: 8px;
     width: 360px;
+    border: 1px solid #e7e9fc;
 
 }
 
@@ -345,9 +359,5 @@ a {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
     width: calc((100% - 2*24px) / 3);
-    border: 1px solid #E7E9FC;
-
-
 }
