--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ a {
     display: flex;
     flex-direction: row;
     gap: 40px;
+    padding: 24px 0;
 }
 
 .contacts-list {
@@ -345,6 +346,7 @@ a {
     gap: 8px;
     width: 360px;
     border: 1px solid #e7e9fc;
+    border-top: none; 
 
 }
 
